--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux",
-  "version": "3.3.1",
-  "description": "Predictable state container for JavaScript apps",
+  "name": "plotly-redux",
+  "version": "0.0.1",
+  "description": "Plotly's redux 3.3.1 fork to add full state to reducers",
   "main": "lib/index.js",
   "jsnext:main": "es/index.js",
   "files": [
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/reactjs/redux.git"
+    "url": "https://github.com/plotly/redux.git"
   },
   "keywords": [
     "redux",
